--- a/apps/frontends/webapp/index.html
+++ b/apps/frontends/webapp/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     
     <!-- Preload critical CSS -->
-    <link rel="stylesheet" href="/src/styles.css" />
+    <!-- Vite will handle CSS imports via JS/TS entry points -->
     
     <!-- Initialize theme from localStorage if available -->
     <script>
